--- a/index.html
+++ b/index.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <style>
-        body{
-            background-color:#111;
-            color: #fff;
-        }
+      body {
+        background-color: #111;
+        color: #fff;
+      }
     </style>
-</head>
-<body>
-    
+  </head>
+  <body>
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
